k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pronunt-frontend-service
  namespace: prism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pronunt-frontend-service
  template:
    metadata:
      labels:
        app: pronunt-frontend-service
    spec:
      containers:
        - name: pronunt-frontend-service
          image: ghcr.io/pronunt/pronunt-frontend-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
