k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pronunt-frontend-service
  namespace: prism
spec:
  selector:
    app: pronunt-frontend-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
