k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pronunt-frontend-service
  namespace: pronunt-app-ns
spec:
  parentRefs:
    - name: pronunt-gateway
      namespace: pronunt-gateway-ns
  hostnames:
    - pronunt.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pronunt-frontend-service
          port: 3000
